<resources>
    <string name="app_name">ShoeStore_starter</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome</string>
    <string name="welcome_sentence">let\'s sart our journy</string>>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="_continue">Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instruction1">Next page you will find shoes list and every shoe has its details</string>
    <string name="instruction2">You can add a new shoes by clicking on add button in bottom </string>
    <string name="logout">Logout</string>
    <string name="add_new">Add New Shoes</string>
    <string name="name">name</string>
    <string name="size">size</string>
    <string name="_size">Size : %1s</string>
    <string name="desc">desc</string>
    <string name="company">company</string>
    <string name="enter_shoes_name">Enter Shoes Name</string>
    <string name="enter_shoes_size">Enter Shoes size</string>
    <string name="enter_shoes_desc">Enter Shoes description</string>
    <string name="enter_shoes_company">Enter Shoes company</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>