<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoeViewModel"
            type="com.example.shoestore_starter.presentation.ui.fragments.shoe.ShoeViewModel" />
        <variable
            name="shoeItem"
            type="com.example.shoestore_starter.models.Shoe" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradiant_bg"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingTop="50dp"
            app:toastMessage="@{shoeViewModel.errorMessage}"
            tools:context=".presentation.ui.fragments.shoe.addShoesFragment">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/title_style"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView2"
                style="@style/label_style"
                android:layout_marginTop="30dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:hint="@string/enter_shoes_name"
                    style="@style/input_style"
                    android:text="@={shoeItem.name}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_shoes_company"
                    style="@style/input_style"
                    android:text="@={shoeItem.company}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                style="@style/label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/companyInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sizeInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_shoes_size"
                    style="@style/input_style"
                    android:inputType="numberDecimal"
                    android:text='@={ ""+shoeItem.size}'
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                style="@style/label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sizeInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/enter_shoes_desc"
                    style="@style/input_style"
                    android:text="@={shoeItem.description}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_btn"
                style="@style/btn_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:onClick="@{()-> shoeViewModel.addNewShoes(shoeItem)}"
                app:layout_constraintEnd_toStartOf="@id/cancel_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descInputLayout" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                style="@style/btn_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintBaseline_toBaselineOf="@id/add_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_btn"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>